Few extra optimizations and logging improvements